# project_for_RK

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
api/: openapi.py  urls.py
api/serializers/: currency.py
api/views/: currency.py
core/management/commands/: update_currency.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  currency.py
project_for_RK/: asgi.py  settings.py  urls.py  wsgi.py
tests/currency/test_integration/: test_get_currency.py  test_get_currency_list.py
tests/factories/: currency.py  mixins.py  user.py
